adds openjdk dockerfile